# safe-client-libs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  access_container.rs  apps.rs  appveyor.yml  immutable_data.rs  logging.rs  permissions.rs  revocation.rs
examples/: blob.rs  client_stress_test.rs  nfs_api.rs  rest_api.rs  simulate_browser.rs
ffi_utils/: CHANGELOG.md  Cargo.toml  README.md
mock_routing/: Cargo.toml
safe_app/: CHANGELOG.md  Cargo.toml
safe_app_jni/: Cargo.toml
safe_authenticator/: CHANGELOG.md  Cargo.toml  README.md
safe_authenticator_ffi/: Cargo.toml  cargo.toml
safe_authenticator_jni/: Cargo.toml
safe_core/: CHANGELOG.md  Cargo.toml  README.md
safe_core/examples/: client_stress_test.rs  gen_invites.rs
safe_core/src/: config_handler.rs  connection_manager.rs  errors.rs  event.rs  event_loop.rs  immutable_data.rs  lib.rs  self_encryption_storage.rs
safe_core/src/client/: account.rs  core_client.rs  mdata_info.rs  mod.rs  recoverable_apis.rs  recovery.rs  routing_event_loop.rs
safe_core/src/client/mock/: account.rs  connection_manager.rs  mod.rs  routing.rs  tests.rs  vault.rs
safe_core/src/client/mock/vault/: adata.rs  idata.rs  mdata.rs  mod.rs
safe_core/src/connection_manager/: connection_group.rs  mod.rs  response_manager.rs
safe_core/src/ffi/: arrays.rs  errors.rs  mod.rs  nfs.rs
safe_core/src/ffi/ipc/: req.rs  resp.rs
safe_core/src/ipc/: errors.rs  mod.rs  resp.rs
safe_core/src/ipc/req/: auth.rs  containers.rs  mod.rs  share_mdata.rs
safe_core/src/ipc/resp/: mod.rs
safe_core/src/nfs/: data_map.rs  dir.rs  errors.rs  file.rs  file_helper.rs  mod.rs  reader.rs  tests.rs  writer.rs
safe_core/src/utils/: futures.rs  mod.rs  seed.rs
safe_core/src/utils/logging/: mod.rs
safe_core/src/utils/test_utils/: mod.rs
scripts/: Jenkinsfile  package-runner  package-runner-container  package.ps1  package.rs  packaging  version-check  (+2 more)
(+178 files in other folders)
