[package]
name          = "safe_core"
version       = "0.3.0"
authors       = ["MaidSafe Developers <dev@maidsafe.net>"]
description   = "SAFE Core API library"
documentation = "http://maidsafe.github.io/safe_core/latest/"
repository    = "https://github.com/maidsafe/safe_core"
readme        = "README.md"
license       = "GPL-3.0"
homepage      = "http://maidsafe.net"

[dependencies]
# ---- MaidSafe -----
routing         ={git="https://github.com/waynenilsen/routing.git", rev="3d6812d"} 
lru_time_cache  = "0.2.*"
self_encryption = {git="https://github.com/waynenilsen/self_encryption.git", rev="7af256c"}

# ---- Others ----
log             = "*"
cbor            = "*"
rand            = "*"
sodiumoxide     = "0.0.8"
rustc-serialize = "*"

[dev-dependencies]
env_logger = "*"

[features]
use-mock-routing = []
