[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE core"
documentation = "https://docs.rs/safe_core"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_core"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.31.0"

[dependencies]
base64 = "~0.9.0"
chrono = { version = "~0.4.0", features = ["serde"] }
config_file_handler = "~0.11.0"
ffi_utils = "~0.8.0"
fs2 = "~0.4.3"
futures = "~0.1.17"
lazy_static = "~1.0.0"
log = "~0.4.1"
lru-cache = "~0.1.1"
maidsafe_utilities = "~0.16.0"
rand = "~0.3.18"
routing = { path = "../../routing", version = "0.37.0" } # FIXME
safe_crypto = { path = "../../safe_crypto", version = "0.4.0" } # FIXME
self_encryption = { path = "../../self_encryption", version = "0.13.0" } # FIXME
serde = "~1.0.27"
serde_derive = "~1.0.27"
tokio-core = "~0.1.12"
unwrap = "~1.2.0"

[dev-dependencies]
serde_json = "~1.0.9"

[features]
use-mock-routing = []
testing = []
